--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
+    "@reown/appkit": "^1.7.15",
+    "@reown/appkit-adapter-wagmi": "^1.7.15",
     "@tailwindcss/postcss": "^4.0.14",
-    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query": "^5.83.0",
     "@wagmi/connectors": "^5.7.11",
     "@wagmi/core": "^2.16.7",
     "encoding": "^0.1.13",
@@ -22,8 +24,8 @@
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "viem": "^2.23.13",
-    "wagmi": "^2.14.15"
+    "viem": "^2.33.0",
+    "wagmi": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
